--- a/config.h.in
+++ b/config.h.in
@@ -18,6 +18,7 @@
 #cmakedefine HAVE_UNISTD_H
 #cmakedefine HAVE_ARPA_TELNET_H
 
+#cmakedefine HAVE_GETTIMEOFDAY
 #cmakedefine HAVE_STPCPY
 #cmakedefine HAVE_STPNCPY
 #cmakedefine HAVE_STRTOD
