--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -6,6 +6,7 @@ set(port_SOURCES
     xstrdup.c
     $<$<PLATFORM_ID:Windows>:win32_timer.c>
     $<$<PLATFORM_ID:Windows>:getopt.c>
+    $<$<PLATFORM_ID:Windows>:gettimeofday.c>
     $<$<AND:$<BOOL:${HAVE_LIBRT}>,$<NOT:$<PLATFORM_ID:Windows>>>:posix_timer.c>
     $<$<AND:$<NOT:$<BOOL:${HAVE_LIBRT}>>,$<NOT:$<PLATFORM_ID:Windows>>>:fallback_timer.c>
 )
