port: add crypt() stub

--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -4,9 +4,10 @@ set(port_SOURCES
     $<$<NOT:$<AND:$<BOOL:${HAVE_STPCPY}>,$<BOOL:${HAVE_STPNCPY}>>>:stpcpy.c>
     xcalloc.c
     xstrdup.c
-    $<$<PLATFORM_ID:Windows>:win32_timer.c>
+    $<$<PLATFORM_ID:Windows>:crypt.c>
     $<$<PLATFORM_ID:Windows>:getopt.c>
     $<$<PLATFORM_ID:Windows>:gettimeofday.c>
+    $<$<PLATFORM_ID:Windows>:win32_timer.c>
     $<$<AND:$<BOOL:${HAVE_LIBRT}>,$<NOT:$<PLATFORM_ID:Windows>>>:posix_timer.c>
     $<$<AND:$<NOT:$<BOOL:${HAVE_LIBRT}>>,$<NOT:$<PLATFORM_ID:Windows>>>:fallback_timer.c>
 )
