build: fetch googletest from source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,8 @@ if(BUILD_TESTING)
 	enable_testing()
 	find_package(GTest)
 	if (GTest_FOUND)
+		include(GoogleTest)
+		message(STATUS "Found GoogleTest")
 		add_subdirectory(tests/test_backend)
 		add_subdirectory(tests/test_efuns)
 		add_subdirectory(tests/test_logger)
@@ -103,5 +105,7 @@ if(BUILD_TESTING)
 		add_subdirectory(tests/test_simul_efuns)
 		add_subdirectory(tests/test_stack_machine)
 		add_subdirectory(tests/test_stralloc)
+	else()
+		message(WARNING "GoogleTest not found; unit tests will not be built.")
 	endif()
 endif()
