--- a/tests/test_efuns/CMakeLists.txt
+++ b/tests/test_efuns/CMakeLists.txt
@@ -17,4 +17,5 @@ add_custom_command(TARGET test_efuns POST_BUILD
 gtest_discover_tests(test_efuns
     PROPERTIES
     LABELS "LPC"
+    DISCOVERY_TIMEOUT 20
 )
