--- a/tests/test_lpc_interpreter/CMakeLists.txt
+++ b/tests/test_lpc_interpreter/CMakeLists.txt
@@ -16,5 +16,6 @@ add_custom_command(TARGET test_lpc_interpreter POST_BUILD
 gtest_discover_tests(test_lpc_interpreter
     PROPERTIES
     LABELS "LPC"
+    DISCOVERY_TIMEOUT 20
 )
 
