--- a/tests/test_stack_machine/CMakeLists.txt
+++ b/tests/test_stack_machine/CMakeLists.txt
@@ -16,4 +16,5 @@ add_custom_command(TARGET test_stack_machine POST_BUILD
 gtest_discover_tests(test_stack_machine
     PROPERTIES
     LABELS "STEM"
+    DISCOVERY_TIMEOUT 20
 )
