--- a/tests/test_logger/CMakeLists.txt
+++ b/tests/test_logger/CMakeLists.txt
@@ -6,4 +6,6 @@ add_executable(test_logger
 target_link_libraries(test_logger PRIVATE GTest::gtest_main)
 target_link_libraries(test_logger PRIVATE logger)
 
-gtest_discover_tests(test_logger)
+gtest_discover_tests(test_logger
+    DISCOVERY_TIMEOUT 20
+)
