--- a/tests/test_stralloc/CMakeLists.txt
+++ b/tests/test_stralloc/CMakeLists.txt
@@ -8,4 +8,5 @@ target_link_libraries(test_stralloc PRIVATE stem GTest::gtest_main)
 gtest_discover_tests(test_stralloc
     PROPERTIES
     LABELS "STEM"
+    DISCOVERY_TIMEOUT 20
 )
