feat: add poll() for socket I/O

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ check_include_file(arpa/telnet.h HAVE_ARPA_TELNET_H)
 # check for standard functions
 include(CheckSymbolExists)
 check_symbol_exists(gettimeofday sys/time.h HAVE_GETTIMEOFDAY)
+check_symbol_exists(poll poll.h HAVE_POLL)
 check_symbol_exists(realpath stdlib.h HAVE_REALPATH)
 check_symbol_exists(stpcpy string.h HAVE_STPCPY)
 check_symbol_exists(stpncpy string.h HAVE_STPNCPY)
