test: clean up unit-test env

--- a/tests/test_lpc_compiler/CMakeLists.txt
+++ b/tests/test_lpc_compiler/CMakeLists.txt
@@ -10,7 +10,8 @@ target_link_libraries(test_lpc_compiler PRIVATE stem GTest::gtest_main)
 # setup testing data
 # (the default working directory is ${CMAKE_CURRENT_BINARY_DIR} when running tests)
 add_custom_command(TARGET test_lpc_compiler POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/examples ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/examples/m3_mudlib ${CMAKE_CURRENT_BINARY_DIR}/m3_mudlib
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/examples/m3.conf ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 gtest_discover_tests(test_lpc_compiler
