feat: add IO reactor abstraction and poll() impl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ if(BUILD_TESTING)
 		message(STATUS "Found GoogleTest")
 		add_subdirectory(tests/test_backend)
 		add_subdirectory(tests/test_efuns)
+		add_subdirectory(tests/test_io_reactor)
 		add_subdirectory(tests/test_logger)
 		add_subdirectory(tests/test_lpc_compiler)
 		add_subdirectory(tests/test_lpc_interpreter)
