--- a/config.h.in
+++ b/config.h.in
@@ -7,6 +7,7 @@
 #cmakedefine HAVE_LIMITS_H
 #cmakedefine HAVE_NETDB_H
 #cmakedefine HAVE_STDARG_H
+#cmakedefine HAVE_STDDEF_H
 #cmakedefine HAVE_STDINT_H
 #cmakedefine HAVE_SYS_IOCTL_H
 #cmakedefine HAVE_SYS_PARAM_H
