--- a/tests/test_io_reactor/CMakeLists.txt
+++ b/tests/test_io_reactor/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(test_io_reactor
     test_io_reactor_listen.cpp
     test_io_reactor_console.cpp
     test_io_reactor_iocp.cpp
+    test_io_reactor_wakeup.cpp
 )
 target_link_libraries(test_io_reactor PRIVATE stem GTest::gtest_main)
 
