feat: add lib/async

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ add_compile_definitions(HAVE_CONFIG_H)
 
 # add project components
 add_subdirectory(lib/port)
+add_subdirectory(lib/async)
 add_subdirectory(lib/logger)
 add_subdirectory(lib/rc)
 add_subdirectory(lib/misc)
@@ -99,6 +100,8 @@ if(BUILD_TESTING)
 	if (GTest_FOUND)
 		include(GoogleTest)
 		message(STATUS "Found GoogleTest")
+		add_subdirectory(tests/test_async_queue)
+		add_subdirectory(tests/test_async_worker)
 		add_subdirectory(tests/test_backend)
 		add_subdirectory(tests/test_efuns)
 		add_subdirectory(tests/test_io_reactor)
