--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -1,28 +1,39 @@
 # lib/port/CMakeLists.txt
 
 set(port_SOURCES
-    $<$<NOT:$<AND:$<BOOL:${HAVE_STPCPY}>,$<BOOL:${HAVE_STPNCPY}>>>:stpcpy.c>
+    stpcpy.c
     xcalloc.c
     xstrdup.c
     socket_comm.c
-    $<$<PLATFORM_ID:Windows>:crypt.c>
-    $<$<PLATFORM_ID:Windows>:getopt.c>
-    $<$<PLATFORM_ID:Windows>:gettimeofday.c>
-    $<$<PLATFORM_ID:Windows>:realpath.c>
-    $<$<PLATFORM_ID:Windows>:symlink.c>
-    $<$<PLATFORM_ID:Windows>:win32_timer.c>
-    $<$<AND:$<BOOL:${HAVE_LIBRT}>,$<NOT:$<PLATFORM_ID:Windows>>>:posix_timer.c>
     $<$<AND:$<NOT:$<BOOL:${HAVE_LIBRT}>>,$<NOT:$<PLATFORM_ID:Windows>>>:fallback_timer.c>
-    # I/O Reactor - platform-specific implementation selection
-    $<$<NOT:$<PLATFORM_ID:Windows>>:io_reactor_poll.c>
-    $<$<PLATFORM_ID:Windows>:io_reactor_win32.c>
 )
+
+if(MSVC)
+    # Windows-specific implementations
+    list(APPEND port_SOURCES
+        crypt.c
+        getopt.c
+        gettimeofday.c
+        io_reactor_win32.c
+        port_sync_win32.c
+        realpath.c
+        symlink.c
+        win32_timer.c
+    )
+else()
+    # POSIX-compatible implementations
+    list(APPEND port_SOURCES
+        io_reactor_poll.c
+        port_sync_pthread.c
+        posix_timer.c
+    )
+endif()
 
 add_library(port STATIC ${port_SOURCES})
 target_sources(port INTERFACE
     FILE_SET HEADERS
     BASE_DIRS ..
-    FILES ansi.h debug.h wrapper.h byte_code.h timer_port.h socket_comm.h io_reactor.h
+    FILES ansi.h debug.h wrapper.h byte_code.h timer_port.h socket_comm.h io_reactor.h port_sync.h
 )
 
 # Windows-specific libraries for timer support
