feat: integrate console mode with async_runtime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ if(BUILD_TESTING)
 		message(STATUS "Found GoogleTest")
 		add_subdirectory(tests/test_async_queue)
 		add_subdirectory(tests/test_async_worker)
+		add_subdirectory(tests/test_console_worker)
 		add_subdirectory(tests/test_backend)
 		add_subdirectory(tests/test_efuns)
 		add_subdirectory(tests/test_io_reactor)
