--- a/lib/async/CMakeLists.txt
+++ b/lib/async/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(async STATIC)
 
 target_sources(async PRIVATE
     async_queue.c
+    console_worker.c
     $<IF:$<PLATFORM_ID:Windows>,async_worker_win32.c,async_worker_pthread.c>
     $<IF:$<PLATFORM_ID:Windows>,async_runtime_iocp.c,$<IF:$<PLATFORM_ID:Linux>,async_runtime_epoll.c,async_runtime_poll.c>>
 )
@@ -15,6 +16,7 @@ target_include_directories(async PUBLIC
 
 target_link_libraries(async PUBLIC
     port
+    logger
 )
 
 # Platform-specific libraries
