fix: refactor timer_port with c++11

--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -5,7 +5,7 @@ set(port_SOURCES
     xcalloc.c
     xstrdup.c
     socket_comm.c
-    $<$<AND:$<NOT:$<BOOL:${HAVE_LIBRT}>>,$<NOT:$<PLATFORM_ID:Windows>>>:fallback_timer.c>
+    timer_port.cpp
 )
 
 if(MSVC)
@@ -17,13 +17,11 @@ if(MSVC)
         port_sync_win32.c
         realpath.c
         symlink.c
-        win32_timer.c
     )
 else()
     # POSIX-compatible implementations
     list(APPEND port_SOURCES
         port_sync_pthread.c
-        posix_timer.c
     )
 endif()
 
@@ -34,18 +32,9 @@ target_sources(port INTERFACE
     FILES ansi.h debug.h wrapper.h byte_code.h timer_port.h socket_comm.h port_sync.h
 )
 
-# Windows-specific libraries for timer support
-if(WIN32)
-    target_link_libraries(port PRIVATE kernel32)
-endif()
+# C++11 required for timer implementation
+target_compile_features(port PUBLIC cxx_std_11)
 
-# POSIX systems may need librt for timer functions
-if(HAVE_LIBRT)
-    target_link_libraries(port PRIVATE rt)
-endif()
-
-# Fallback timer needs pthread on non-Windows systems
-if(NOT WIN32 AND NOT HAVE_LIBRT)
-    find_package(Threads REQUIRED)
-    target_link_libraries(port PRIVATE Threads::Threads)
-endif()
+# Thread library required for C++11 std::thread
+find_package(Threads REQUIRED)
+target_link_libraries(port PRIVATE Threads::Threads)
