--- a/tests/test_lpc_interpreter/CMakeLists.txt
+++ b/tests/test_lpc_interpreter/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(test_lpc_interpreter
     test_double_precision.cpp
     test_int64.cpp
     test_lpc_interpreter.cpp
+    test_sentence.cpp
 )
 
 target_link_libraries(test_lpc_interpreter PRIVATE stem GTest::gtest_main)
