test: added unit-test for input_to and get_char

--- a/tests/test_lpc_interpreter/CMakeLists.txt
+++ b/tests/test_lpc_interpreter/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(test_lpc_interpreter
     test_int64.cpp
     test_lpc_interpreter.cpp
     test_sentence.cpp
+    test_input_to_get_char.cpp
 )
 
 target_link_libraries(test_lpc_interpreter PRIVATE stem GTest::gtest_main)
