--- a/examples/m3.conf
+++ b/examples/m3.conf
@@ -1,7 +1,8 @@
-MudlibDir	m3_mudlib
-MasterFile	/master.c
-Port		4000:telnet
-LogWithDate	Yes
+MudlibDir	    m3_mudlib
+SimulEfunFile   /simul_efun.c
+MasterFile	    /master.c
+Port		    4000:telnet
+LogWithDate	    Yes
 
 # Optional settings
 SaveBinaryDir    /bin
